--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -2,15 +2,7 @@
 
 <% form_for(@customer) do |f| %>
   <%= f.error_messages %>
-	<p>Company Name: <%= f.text_field :CompanyName %></p>	
-	<p>Contact Name: <%= f.text_field :ContactName %></p>
-	<p>Contact Title: <%= f.text_field :ContactTitle %></p>
-	<p>Address: <%= f.text_field :Address %></p>	
-	<p>City: <%= f.text_field :City %></p>	
-	<p>Region: <%= f.text_field :Region %></p>
-	<p>Postal Code: <%= f.text_field :PostalCode %></p>	
-	<p>Phone: <%= f.text_field :Phone %></p>		
-	<p>Fax: <%= f.text_field :Fax %></p>
+		<%= render :partial => 'form' %>
   <p>
     <%= f.submit "Create" %>
   </p>
