--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -2,7 +2,7 @@
 
 <% form_for(@customer) do |f| %>
   <%= f.error_messages %>
-		<%= render :partial => 'form' %>
+		<%= render :partial => 'form', :locals => {:f => f} %>
   <p>
     <%= f.submit "Update" %>
   </p>
